Added framework for Renderer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,5 +15,11 @@ set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${GCC_LINK_FLAGS}")
 find_package(Qt5 COMPONENTS Core Widgets Gui OpenGL)
 include_directories(${Qt5Widgets_INCLUDE_DIRS})
 
+#glm
+set(GLM_INC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/ext/glm)
+include_directories(${GLM_INC_DIR})
+
+#DCMTK
+
 
 add_subdirectory(src)
