--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,3 +23,5 @@ add_executable(VolumetricRenderer ${volumetricRendererSrc})
 target_link_libraries(VolumetricRenderer Qt5::Core Qt5::Widgets Qt5::OpenGL)
 
 target_link_libraries(VolumetricRenderer dcmdata dcmimgle dcmimage )
+
+target_link_libraries(VolumetricRenderer tiff)
