Added Raw loader, sample map editor and image settings widget

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,8 @@ set (volumetricRendererSrc
 		ControlPanel.cpp
 		RenderViewport.cpp
 		TestGenerateVolume.cpp
+		SampleMappingEditor.cpp
+		ImageSettings.cpp
 		
 		Renderer/Texture3D.cpp
 		Renderer/Object3D.cpp
