Added Ray Volume Object

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,6 +15,7 @@ set (volumetricRendererSrc
 		Renderer/Texture1D.cpp
 		Renderer/Object3D.cpp
 		Renderer/TextureVolumeObject.cpp
+		Renderer/RayVolumeObject.cpp
 		Renderer/CameraObject.cpp
 		Renderer/CameraControl.cpp
 		Renderer/AxisObject.cpp
